--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -21,6 +21,8 @@ jobs:
       with:
         java-version: 14
     - name: Grant execute permission for gradlew
+      working-directory: ./JavaFlow
       run: chmod +x gradlew
     - name: Build with Gradle
+      working-directory: ./JavaFlow
       run: ./gradlew build
