--- a/CPPFlow/CMakeLists.txt
+++ b/CPPFlow/CMakeLists.txt
@@ -3,4 +3,7 @@ project(CPPFlow)
 
 set(CMAKE_CXX_STANDARD 17)
 
+add_subdirectory(CPPFlow)
+
 add_executable(CPPFlow main.cpp)
+target_link_libraries(CPPFlow PUBLIC cppflow)
